added enhancment code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 server.port=8080
 
-spring.security.oauth2.client.registration.reddit.client-id=${REDDIT_CLIENT_ID}
-spring.security.oauth2.client.registration.reddit.client-secret=${REDDIT_CLIENT_SECRET}
+# ===== Reddit OAuth2 Registration =====
+spring.security.oauth2.client.registration.reddit.client-id=PS91P4cpjP1k3haYcmGl-Q
+spring.security.oauth2.client.registration.reddit.client-secret=-yV6bn3WfcA4FTKvsucKJ8oJL1M7Fg
+spring.security.oauth2.client.registration.reddit.client-authentication-method=client_secret_basic
 spring.security.oauth2.client.registration.reddit.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.reddit.redirect-uri=http://127.0.0.1:8080/login/oauth2/code/reddit
 spring.security.oauth2.client.registration.reddit.scope=identity,read,history
 spring.security.oauth2.client.registration.reddit.client-name=Reddit
 
+# ===== Reddit OAuth2 Provider =====
 spring.security.oauth2.client.provider.reddit.authorization-uri=https://www.reddit.com/api/v1/authorize
 spring.security.oauth2.client.provider.reddit.token-uri=https://www.reddit.com/api/v1/access_token
 spring.security.oauth2.client.provider.reddit.user-info-uri=https://oauth.reddit.com/api/v1/me
